# stereo_calib

convert_calib/: Makefile  berndcalibration.yml  configuration.h  main  main.cpp  stereo_parameters_conv.yml
data/: calibration_file.yml
fla_related/: right_left.yaml
fla_related/calib_convert/: .convert.cpp.swp  CMakeLists.txt  convert.cpp
fla_related/calib_convert/scripts/: .cam1.yaml.swp  .kalibr_to_camerainfo.py.swp  calib_gui.bash  calibration_to_static_tf.py  cam0.yaml  cam1.yaml  kalibr_to_camerainfo.py  transfer_intrinsics.bash  update_all_camerainfos.bash  update_all_static_tf.bash  update_camerainfo.bash  update_static_tf.bash
src/: configuration.h
stereo_calib_nov/: CMakeLists.txt  package.xml
stereo_calib_nov/src/: generate_calib_data.cpp
